Full maven build should work